# anymount

./: .gitignore  .mise.toml  Cargo.toml  README.md
.agents/skills/comments-and-docs/: SKILL.md
.agents/skills/fmt/: SKILL.md
.agents/skills/mise-tasks/: SKILL.md
.codex/agents/: superpowers
.codex/commands/: superpowers
.cursor/: worktrees.json
.cursor/rules/: architecture.mdc  comments.mdc  mise-tasks.mdc  mise.mdc
.cursor/skills/ms-rust-skill/: SKILL.md
.cursor/skills/ports-adapters/: SKILL.md
.cursor/skills/test/: SKILL.md
.github/workflows/: ci.yml
app/macos/: .gitignore  project.yml
app/macos/FileProviderExtension/: AnymountXPCService.swift  FileProviderEnumerator.swift  FileProviderExtension.entitlements  FileProviderExtension.swift  FileProviderItem.swift  Info.plist
app/macos/MainApp/: AnymountApp.swift  ContentView.swift  Info.plist
app/macos/XPCService/: Bridging-Header.h  Info.plist  XPCService.entitlements  main.swift
app/macos/include/: anymount_ffi.h
app/windows/: AppxManifest.xml  README.md
crates/anymount/: Cargo.toml
crates/anymount-cli/: Cargo.toml
crates/anymount-cli/src/: main.rs
crates/anymount-cli/src/commands/: list.rs  mock.rs  mod.rs  unmount.rs
crates/anymount-core/: Cargo.toml
crates/anymount-core/src/: error.rs  lib.rs  metadata.rs  mount.rs  provider.rs
crates/anymount-macos/: Cargo.toml
crates/anymount-macos/examples/: mount_mock.rs
crates/anymount-macos/src/: bridge.rs  domain.rs  ffi.rs  item.rs  lib.rs
crates/anymount-providers/: Cargo.toml
crates/anymount-providers/src/: mock.rs
crates/anymount/src/: config.rs  error.rs  lib.rs  logger.rs  main.rs  provider.rs
crates/anymount/src/application/: auth.rs  config.rs  connect.rs  disconnect.rs  mod.rs  provide.rs  status.rs  types.rs
crates/anymount/src/auth/: error.rs  mod.rs  onedrive.rs  token_response.rs
crates/anymount/src/cli/: cli.rs  error.rs  mod.rs  provider_control.rs  run.rs
crates/anymount/src/cli/commands/: auth.rs  config.rs  connect.rs  connect_sync.rs  disconnect.rs  list.rs  mock.rs  mod.rs  provide.rs  status.rs  unmount.rs
crates/anymount/src/cli/provider_control/: mod.rs  provider_control_unix.rs  provider_control_windows.rs
crates/anymount/src/daemon/: control.rs  control_unix.rs  control_windows.rs  error.rs  messages.rs  mod.rs  paths.rs  runtime.rs
crates/anymount/src/domain/: driver.rs  mod.rs  provider.rs
crates/anymount/src/drivers/: driver.rs  error.rs  mod.rs
crates/anymount/src/drivers/fuse/: error.rs  mod.rs
crates/anymount/src/drivers/linux/: dbus.rs  error.rs  fuse.rs  gtk_dbus.rs  linux_driver.rs  mod.rs
crates/anymount/src/drivers/windows/: callbacks.rs  cleanup_registry.rs  error.rs  mod.rs  placeholders.rs  register.rs  windows_driver.rs
crates/anymount/src/providers/: error.rs  mock.rs  mod.rs  provider.rs
crates/anymount/src/providers/cloudfilter/: callbacks.rs  cleanup_registry.rs  error.rs  mod.rs  placeholders.rs  provider.rs  register.rs
crates/anymount/src/providers/libcloudprovider/: dbus.rs  fuse.rs  gtk_dbus.rs  mod.rs  provider.rs
crates/anymount/src/providers/linux/: dbus.rs  fuse.rs  mod.rs  provider.rs
crates/anymount/src/service/: error.rs  mod.rs  runtime.rs
crates/anymount/src/service/control/: messages.rs  mod.rs  paths.rs  unix.rs  windows.rs
crates/anymount/src/storages/: error.rs  local.rs  mock.rs  mod.rs  onedrive.rs  storage.rs
crates/anymount/src/telemetry/: mod.rs
crates/anymount/src/tui/: adapters.rs  edit.rs  error.rs  input.rs  mod.rs  model.rs  services.rs  state.rs  terminal.rs  theme_layout.rs  tui.rs
crates/anymount/src/tui/components/: app.rs  delete_dialog.rs  edit_form.rs  footer.rs  main.rs  mod.rs
crates/anymount/src/windows/: callbacks.rs  main.rs  mod.rs  populate.rs  provider.rs  registration.rs  sync.rs
crates/anymount/tests/system/: local_provider_test.rs
data/: org.anymount.CloudProviders.desktop
devtools/otel-collector/: config.yaml
docs/superpowers/plans/: 2026-03-18-module-errors.md  2026-03-18-provider-daemon.md  2026-03-19-application-layer-boundaries.md  2026-03-19-local-provider-system-test.md  2026-03-20-driver-refactor.md  2026-03-20-tui-redesign-implementation.md  2026-03-21-driver-session-storage-refactor.md  2026-03-21-macos-fuse-driver.md
docs/superpowers/specs/: 2026-03-18-module-errors-design.md  2026-03-18-provider-daemon-design.md  2026-03-19-application-layer-boundaries-design.md  2026-03-19-provider-status-design.md  2026-03-20-driver-refactor-design.md  2026-03-20-provider-disconnect-design.md  2026-03-20-provider-logs-ipc-design.md  2026-03-20-provider-telemetry-otlp-design.md  2026-03-20-tui-redesign-design.md  2026-03-21-macos-fuse-driver-design.md
