[workspace]
members = [
    "crates/anymount-core",
    "crates/anymount-providers",
    "crates/anymount-macos",
    "crates/anymount-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
authors = ["anymount contributors"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# File system abstractions
bytes = "1.9"

[profile.release]
strip = true
lto = true
codegen-units = 1

