[package]
name = "anymount-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "anymount"
path = "src/main.rs"

[dependencies]
anymount-core = { path = "../anymount-core" }
anymount-providers = { path = "../anymount-providers" }
anymount-macos = { path = "../anymount-macos" }

tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

