[package]
name = "anymount-macos"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anymount-core = { path = "../anymount-core" }
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true

# FFI dependencies
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
uuid = { version = "1.0", features = ["v4"], optional = true }
anymount-providers = { path = "../anymount-providers", optional = true }

[[example]]
name = "mount_mock"
required-features = []

[dev-dependencies]
anymount-providers = { path = "../anymount-providers" }
tracing-subscriber.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
# FileProvider framework bindings
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-file-provider = "0.3"
block2 = "0.6"

# Additional macOS system bindings
objc2-uniform-type-identifiers = "0.3"

[features]
default = []
ffi = ["serde", "serde_json", "uuid", "anymount-providers"]

[lib]
crate-type = ["lib", "staticlib"]

