[package]
name = "anymount"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "anymount-cli"
path = "src/main.rs"

[[bin]]
name = "anymount-win"
path = "src/windows/main.rs"
required-features = ["windows"]

[dependencies]
# Core dependencies
thiserror = "1.0"
bytes = "1.9"
parking_lot = "0.12"

# CLI dependencies
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# macOS-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-file-provider = "0.3"
block2 = "0.6"
objc2-uniform-type-identifiers = "0.3"

# Windows-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
cloud-filter = "0.0.6"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_CloudFilters",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Storage",
    "Storage_Provider",
    "Foundation",
] }

[dev-dependencies]
# No additional dev dependencies needed

[features]
default = []
windows = []
macos = []

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

