[package]
name = "anymount"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "anymount-cli"
path = "src/main.rs"

[dependencies]
# Core dependencies
thiserror = "1.0"
bytes = "1.9"
parking_lot = "0.12"
oauth2 = { version = "5", default-features = false, features = ["ureq"] }
ureq = "2.11"
url = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
jsonwebtoken = "10"
urlencoding = "2.1"

# CLI dependencies
clap = { version = "4.5", features = ["derive"] }
open = "5"
ctrlc = "3.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Windows-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
cloud-filter = { git = "https://github.com/esdandreu/cloud-filter-rs" }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_CloudFilters",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Storage",
    "Storage_Provider",
    "Foundation",
] }

[dev-dependencies]
tempfile = "3"

[features]
default = []
windows = []
macos = []

[lints.clippy]
unwrap_used = "deny"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
