[package]
name = "anymount"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "anymount-cli"
path = "src/main.rs"

[[test]]
name = "local_provider_test"
path = "tests/system/local_provider_test.rs"

[dependencies]
# Core dependencies
thiserror = "1.0"
bytes = "1.9"
parking_lot = "0.12"
oauth2 = { version = "5", default-features = false, features = ["ureq"] }
ureq = "2.11"
url = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "6"
chrono = "0.4"
jsonwebtoken = "10"
urlencoding = "2.1"

# CLI dependencies
clap = { version = "4.5", features = ["derive"] }
inquire = "0.7"
crossterm = "0.28"
ratatui = "0.29"
open = "5"
ctrlc = "3.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
opentelemetry = { version = "0.31.0", default-features = false, features = [
    "trace",
    "logs",
] }
opentelemetry_sdk = { version = "0.31.0", default-features = false, features = [
    "trace",
    "logs",
] }
opentelemetry-otlp = { version = "0.31.0", default-features = false, features = [
    "trace",
    "logs",
    "http-proto",
    "grpc-tonic",
    "reqwest-blocking-client",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tonic = { version = "0.14.5", default-features = false }
tracing-opentelemetry = { version = "0.32.1", default-features = false, features = [
    "tracing-log",
] }
opentelemetry-appender-tracing = "0.31.1"
opentelemetry-semantic-conventions = "0.31.0"

# Linux-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
fuser = "0.17"
libc = "0.2"
zbus = { version = "5", features = ["tokio"] }

# macOS-specific dependencies (requires macFUSE installed)
[target.'cfg(target_os = "macos")'.dependencies]
fuser = { version = "0.17", optional = true }
libc = "0.2"

# Windows-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
cloud-filter = { git = "https://github.com/esdandreu/cloud-filter-rs" }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_CloudFilters",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_UI_Shell",
    "Storage",
    "Storage_Provider",
    "Foundation",
] }

[dev-dependencies]
tempfile = "3"

[features]
default = []
windows = []
macos = ["dep:fuser"]

[lints.clippy]
unwrap_used = "deny"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
